--- a/style.css
+++ b/style.css
@@ -2945,7 +2945,7 @@ a[title="站长统计"] {
   width: 100%;
   color: #ffffff;
   height: 56px;
-  background: #7389ef;
+  background: #526ce2;
   -webkit-transition: padding-left 0.6s ease-in-out, background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
   transition: padding-left 0.6s ease-in-out, background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
   z-index: 30;
